# EntryptLibrary

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yumi/encryptlibrary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AES.cpp  AESMain.cpp  Base64.cpp  Base64.h  MD5.cpp  MD5.h  encryptUtils.cpp  native-lib.cpp
app/src/main/java/com/yumi/encryptlibrary/: EncryptActivity.kt  MainActivity.kt
app/src/main/java/com/yumi/encryptlibrary/encrypt/: EncryptUtils.java
app/src/main/java/com/yumi/encryptlibrary/utils/: Base64.java  DeviceUUIDFactory.java  DeviceUtils.java  Installation.java  UtiEncrypt.java
app/src/main/jni/: com_yumi_encryptlibrary_encrypt_EncryptUtils.h
app/src/main/res/layout/: activity_encrypt.xml
app/src/test/java/com/yumi/encryptlibrary/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
